<resources>
    <string name="explore_top">Top</string>
    <string name="explore_find_show">Find a show</string>
    <string name="explore_for_you">For you</string>
    <string name="explore_search_podcasts">Search podcasts</string>
    <string name="explore_search_episodes">Ask anything</string>
    <string name="explore_back">Back</string>
    <string name="explore_clear_search">Clear search</string>
    <string name="explore_back_to_browse">Back to Explore</string>
    <string name="explore_search">Search</string>
...
